Update: change subscribe method name

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 		}
 
 		function subscribe () {
-			symbl.subscribeToStreaming(id, (data) => {
+			symbl.subscribeToStream(id, (data) => {
 				console.log('data:', data);
 			})
 		}
