--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,29 @@
 <html>
 <head>
-	<script src="../dist/symbl.min.js"></script>
+	<!-- You can reference the local build or the latest version that has been released to the CDN -->
+	<!-- <script src="../dist/symbl.min.js"></script> -->
+	<script src="https://storage.googleapis.com/symbl-web-sdk/latest/symbl.min.js"></script> <!-- CDN -->
+</head>
+
+<body>
+	<button id="start-connection" onclick="connect()">Connect</button>
+	<button id="start-subscription" onclick="subscribe()">Subscribe</button>
+	<button id="reconnect" onclick="symbl.reconnect()">Reconnect</button>
+	<div>
+		<h2>Live transcription: </h2>
+		<p id="transcript"></p>
+	</div>
+
 	<script>
-		const symbl = new sdk.Symbl();
 		const id = btoa("symbl-ai-is-the-best");
+		symbl.logger.setDefaultLevel("debug");
 		symbl.init({
 			appId: '<your App ID>',
 			appSecret: '<your App Secret>',
-			basePath: '<your custom base path (optional)>',
+			// basePath: '<your custom base path (optional)>',
 		});
+
+		const transcriptDiv = document.getElementById("transcript");
 
 		async function connect() {
 			const connectionConfig = {
@@ -19,12 +34,12 @@
 		        confidenceThreshold: 0.7,
 		        timezoneOffset: 480, // Offset in minutes from UTC
 		        languageCode: 'en-US',
-		        sampleRateHertz: 44100
+				sampleRateHertz: new AudioContext().sampleRate
 		      },
 		      speaker: {
 		        // Optional, if not specified, will simply not send an email in the end.
-		        userId: '', // Update with valid email
-		        name: ''
+		        userId: 'christopherstokes@symbl.ai', // Update with valid email
+		        name: 'Chris Stokes'
 		      },
 		      handlers: {
 		        /**
@@ -33,51 +48,45 @@
 		        onSpeechDetected: (data) => {
 		          if (data) {
 		            const {punctuated} = data
-		            console.log('Live: ', punctuated && punctuated.transcript)
-		            console.log('');
+					symbl.logger.debug(punctuated && punctuated.transcript);
+					transcriptDiv.innerText = punctuated && punctuated.transcript;
 		          }
-		          // console.log('onSpeechDetected ', JSON.stringify(data, null, 2));
+		          // symbl.logger.log('onSpeechDetected ', JSON.stringify(data, null, 2));
 		        },
 		        /**
 		         * When processed messages are available, this callback will be called.
 		         */
 		        onMessageResponse: (data) => {
-		          // console.log('onMessageResponse', JSON.stringify(data, null, 2))
+		          // symbl.logger.log('onMessageResponse', JSON.stringify(data, null, 2))
 		        },
 		        /**
 		         * When Symbl detects an insight, this callback will be called.
 		         */
 		        onInsightResponse: (data) => {
-		          // console.log('onInsightResponse', JSON.stringify(data, null, 2))
+		          // symbl.logger.log('onInsightResponse', JSON.stringify(data, null, 2))
 		        },
 		        /**
 		         * When Symbl detects a topic, this callback will be called.
 		         */
 		        onTopicResponse: (data) => {
-		          // console.log('onTopicResponse', JSON.stringify(data, null, 2))
+		          // symbl.logger.log('onTopicResponse', JSON.stringify(data, null, 2))
 		        }
 		      }
 		    };
 
 			const connection = await symbl.startRealtimeRequest(connectionConfig, true);
+
+			setTimeout(()=> {
+				symbl.stopRequest(connection);
+			}, 60000)
 		}
 
 		function subscribe () {
 			symbl.subscribeToStream(id, (data) => {
-				console.log('data:', data);
+				symbl.logger.log('data:', data);
 			})
 		}
-		
-
-		// const connection = await symbl.startRealtimeRequest(connectionConfig);
-		// symbl.connect(connection);
 
 	</script>
-</head>
-
-<body>
-	<p>test</p>
-	<button id="start-connection" onclick="connect()">Connect</button>
-	<button id="start-subscription" onclick="subscribe()">Subscribe</button>
 </body>
 </html>
