Fix context closing issue.

--- a/examples/index.html
+++ b/examples/index.html
@@ -42,7 +42,7 @@
                 confidenceThreshold: 0.7,
                 timezoneOffset: 480, // Offset in minutes from UTC
                 languageCode: 'en-US',
-                encoding: 'OPUS',
+                // encoding: 'OPUS',
                 // encoding: 'linear16',
               },
               handlers: {},
